# ludka

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: .env  .env.example  bot.py  config.py  main.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: e96cd875a2f6_init.py
app/db/models/: __init__.py  base.py  mixins.py  subscription.py  user.py
app/db/repository/: subscription.py  user.py
app/handler/: __init__.py  start.py  stock.py  subscription.py  ticker.py
app/handlers/: __init__.py  start.py  stock.py  ticker.py
app/keyboard/: main.py
app/keyboards/: main.py
app/middleware/: db.py  logger.py  services.py
app/schema/: base.py  mixins.py  stock.py  subscription.py  ticker.py  user.py
app/schemas/: mixins.py  subscription.py  ticker.py  user.py
app/service/: stock.py  subscription.py  ticker.py  user.py
app/state/: stock.py  subscription.py
app/utils/: format.py
